class Secrets {
  // Add your Google Maps API Key here
  static const API_KEY = 'AIzaSyARDxZgkunFLZCjoRYVbmQYPwYlv1NrMaw';
}